Update employer and LinkedIn username in config

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "Hayden Arnold"
   bio              : "NLP & Computational Social Scientist"
   location         : "Daejeon, South Korea"
-  employer         : "Korea Advanced Institute of Science & Technology"
+  employer         : "KAIST"
   uri              : # URL
   email            : "haydenaa7@gmail.com" 
 
@@ -65,7 +65,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "hayden-arnold"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
