Add CV link to navigation that downloads Resume.pdf

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,10 +12,13 @@ main:
     url: /publications/
 
   #- title: "Talks"
-  #  url: /talks/    
+  #  url: /talks/  
 
   - title: "Teaching"
     url: /teaching/    
+    
+  - title: "CV"
+    url: /files/Resume.pdf
     
   #- title: "Portfolio"
   #  url: /portfolio/
